@@ -1,5 +1,5 @@
 /*
- * $Id: misc.h,v 1.40 2014/03/17 16:26:57 juhaszp Exp $
+ * $Id: misc.h,v 1.41 2014/04/25 00:22:23 sfeam Exp $
  */
 
 /* GNUPLOT - misc.h */
@@ -43,6 +43,7 @@
 
 #include "graphics.h"
 #include "graph3d.h"
+#include "term_api.h"
 
 
 /* Variables of misc.c needed by other modules: */
@@ -110,5 +111,9 @@ typedef struct lf_state_struct {
     char *call_args[10];	/* args when file is 'call'ed instead of 'load'ed */
 }  LFS;
 extern LFS *lf_head;
+
+/* encoding stuff */
+enum set_encoding_id encoding_from_locale(void);
+void init_encoding(void);
 
 #endif /* GNUPLOT_MISC_H */
