@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: set.c,v 1.516 2016/04/24 17:41:18 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: set.c,v 1.517 2016/04/26 06:09:03 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - set.c */
@@ -1601,56 +1601,15 @@ set_encoding()
 	encoding = S_ENC_DEFAULT;
 #ifdef HAVE_LOCALE_H
     } else if (equals(c_token, "locale")) {
-#ifndef WIN32
-	l = setlocale(LC_CTYPE, "");
-	if (l && (strstr(l, "utf") || strstr(l, "UTF")))
-	    encoding = S_ENC_UTF8;
-	if (l && (strstr(l, "sjis") || strstr(l, "SJIS") || strstr(l, "932")))
-	    encoding = S_ENC_SJIS;
-	/* FIXME: "set encoding locale" supports only sjis and utf8 on non-Windows systems */
-#else
-	char * cp_str;
+	enum set_encoding_id newenc = encoding_from_locale();
 
 	l = setlocale(LC_CTYPE, "");
-	/* preserve locale string, skip language information */
-	cp_str = strchr(l, '.');
-	if (cp_str) {
-	    unsigned cp;
-
-	    cp_str++; /* Step past the dot in, e.g., German_Germany.1252 */
-	    cp = strtoul(cp_str, NULL, 10);
-
-	    /* The code below is the inverse to the code found in UnicodeText().
-	       For a list of code page identifiers see
-	       http://msdn.microsoft.com/en-us/library/dd317756%28v=vs.85%29.aspx
-	    */
-	    switch (cp) {
-	    case 437:   encoding = S_ENC_CP437; break;
-	    case 850:   encoding = S_ENC_CP850; break;
-	    case 852:   encoding = S_ENC_CP852; break;
-	    case 932:   encoding = S_ENC_SJIS; break;
-	    case 950:   encoding = S_ENC_CP950; break;
-	    case 1250:  encoding = S_ENC_CP1250; break;
-	    case 1251:  encoding = S_ENC_CP1251; break;
-	    case 1252:  encoding = S_ENC_CP1252; break;
-	    case 1254:  encoding = S_ENC_CP1254; break;
-	    case 20866: encoding = S_ENC_KOI8_R; break;
-	    case 21866: encoding = S_ENC_KOI8_U; break;
-	    case 28591: encoding = S_ENC_ISO8859_1; break;
-	    case 28592: encoding = S_ENC_ISO8859_2; break;
-	    case 28599: encoding = S_ENC_ISO8859_9; break;
-	    case 28605: encoding = S_ENC_ISO8859_15; break;
-	    case 65001: encoding = S_ENC_UTF8; break;
-	    case 0:
-		int_warn(NO_CARET, "Error converting locale \"%s\" to codepage number", l);
-		encoding = S_ENC_DEFAULT;
-		break;
-	    default:
-		int_warn(NO_CARET, "Locale not supported by gnuplot: %s", l);
-		encoding = S_ENC_DEFAULT;
-	    }
-	}
-#endif
+	if (newenc == S_ENC_DEFAULT)
+	    int_warn(NO_CARET, "Locale not supported by gnuplot: %s", l);
+	if (newenc == S_ENC_INVALID)
+	    int_warn(NO_CARET, "Error converting locale \"%s\" to codepage number", l);
+	else
+	    encoding = newenc;
 	c_token++;
 #endif
     } else {
